statum-macros/tests/ui/invalid_validators_missing_variant.stderr
error: Error: `#[validators(TaskMachine)]` on `impl DbRow` is missing validator methods for `TaskState`.
       Found: missing validator methods: `is_done`
       Expected: one `is_{state}` method per `TaskState` variant
       Fix: add one validator per state variant in snake_case, for example `fn is_draft(&self) -> Result<(), _>`.
  --> tests/ui/invalid_validators_missing_variant.rs:29:1
   |
29 | #[validators(TaskMachine)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `validators` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/ui/invalid_validators_missing_variant.rs:39:2
   |
39 | }
   |  ^ consider adding a `main` function to `$DIR/tests/ui/invalid_validators_missing_variant.rs`
